# django-inertia

./: .copier-answers.yml  .dockerignore  README.md  dev.Dockerfile  docker-compose.yaml  docker_startup.sh  manage.py  package.json  prod.Dockerfile  pyproject.toml  vite.Dockerfile
django-inertia/: asgi.py  settings.py  urls.py  wsgi.py
frontend/css/: tailwind.css
frontend/js/components/: Layout.jsx
frontend/js/components/ui/: alert-dialog.jsx
frontend/js/pages/: Index.jsx  Villains.jsx
frontend/js/pages/Heroes/: Detail.jsx
heroes/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
heroes/management/commands/: seed_heroes.py  update_hero_images.py
templates/: base.html
